# personle

./: Cargo.toml  LICENSE  README.md  build.sh  deploy.sh  index.html  local-setup.sh  local-start.sh  package-lock.json  package.json  persona_data.json  persona_data.ts  pom.xml  tailwind.config.ts
conf/: nginx.conf  personle.service
personle-api/: .gitignore  pom.xml  run.sh
personle-api-tests/: requirements.txt  run.sh
personle-api-tests/src/: constants.py  main.py
personle-cdk/: .env.example  .gitignore  README.md  cdk.context.json  cdk.json  local-deploy.sh  local-destroy.sh  package-lock.json  package.json
personle-cdk/lib/: personle-cdk-stack.ts  personle-ec2.ts
personle-lambda/: .gitignore  .prettierrc.json  README.md  package-lock.json  package.json
personle-lambda/src/: constants.ts  environment.d.ts  main.ts  utils.ts
personle-tools/: Cargo.toml  rustfmt.toml
personle-tools/src/: collation.rs  constants.rs  fetchers.rs  logging.rs  main.rs  model.rs  utils.rs
personle-website/: .eslintrc.cjs  .lintstagedrc.json  .prettierrc.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
personle-website/public/: manifest.webmanifest  robots.txt  sitemap.xml
personle-website/src/: index.css  main.tsx
src/: App.tsx  collation.rs  fetchers.rs  index.css  main.rs  main.tsx  model.rs  utils.rs
src/data/: Personas.ts  persona.ts
src/layouts/: ResponsiveViewportContainer.tsx  ResponsiveWindowContainer.tsx  RootLayout.tsx  ViewportCentered.tsx
src/pages/: Home.tsx  Play.tsx  Profile.tsx
(+157 files in other folders)
